[package]
name = "inverse_harmony"
version = "0.1.0"
edition = "2021"
authors = ["Ethan Meltzer <emeltzer@oberlin.edu>"]
license = "GPL-3.0-or-later"
homepage = "everwild.dev"
description = "Uses FFT to estimate f0 and uses that as an axis on which to flip in the frequency domain."

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
realfft = "3.4.0"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["assert_process_allocs"] }

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
